name:                xlsx-util
version:             0.2.0.1
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/xlsx-util#readme
license:             2ClauseBSD
license-file:        LICENSE
author:              jabaraster
maintainer:          ah@jabara.info
copyright:           2017 jabaraster
category:            Utility
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , text
                     , time
                     , lens
                     , xlsx
                     , parsec
  exposed-modules:     Jabara.Util.Xlsx


test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , xlsx-util
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules: Jabara.Util.XlsxSpec
