name:                xlsx-util
version:             1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/xlsx-util#readme
license:             2ClauseBSD
license-file:        LICENSE
author:              jabaraster
maintainer:          ah@jabara.info
copyright:           2017 jabaraster
category:            Utility
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Jabara.Xlsx
                       Jabara.Xlsx.Types
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , text
                     , time
                     , lens
                     , xlsx
                     , parsec
test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , lens
                     , xlsx
                     , xlsx-util
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Jabara.XlsxSpec
                       Jabara.Xlsx.TypeSpec
benchmark example
  type:                exitcode-stdio-1.0
  hs-source-dirs:      example
  main-is:             Main.hs
  build-depends:       base
                     , bytestring
                     , time
                     , directory
                     , lens
                     , xlsx
                     , xlsx-util
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
